AddDialog: Add a default file extension to the file being created.

KFileDialog (actually, KFileWidget)'s does not append an extension to the
selected file when it already exists, which is always the case when a single
file is being compressed, as the default file name is the file's own name.

To work around this, we always add the main extension for the current mimetype
the file passed to setSelection().

BUG: 272914
FIXED-IN: 4.6.4

svn path=/branches/KDE/4.6/kdeutils/ark/; revision=1231313